--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,6 +1,9 @@
 @inproceedings{Zhang2025shapecraft,
   bibtex_show={true},
   abbr={NeurIPS},
+  pdf={https://openreview.net/pdf/f48972703e60314dd913dc15debc572cc7af3ac4.pdf},
+  website={https://sanbingyouyong.github.io/shapecraft/},
+  code={https://github.com/SanBingYouYong/shapecraft},
   title={ShapeCraft: LLM Agents for Structured, Textured and Interactive 3D Modeling},
   author={Zhang, Shuyuan and Jiang, Chenhan and Li, Zuoou and Deng, Jiankang},
   booktitle={NeurIPS},
@@ -10,10 +13,10 @@
 @inproceedings{chen2025zerogs,
   bibtex_show={true},
   abbr={NeurIPS},
-  pdf={https://arxiv.org/pdf/2411.15779},
-  website={https://aibluefisher.github.io/ZeroGS/},
-  code={https://github.com/aibluefisher/ZeroGS},
-  title={Zerogs: Training 3d gaussian splatting from unposed images},
+  pdf={https://openreview.net/pdf/0a5c5e827781b0f2f50b389297ba930695e72e84.pdf},
+  website={https://aibluefisher.github.io/DeepGfM/},
+  code={https://github.com/AIBluefisher/DeepGfM},
+  title={Deep Gaussian from Motion: Exploring 3D Geometric Foundation Models for Gaussian Splatting},
   author={Chen, Yu and Potamias, Rolandos Alexandros and Ververas, Evangelos and Song, Jifei and Deng, Jiankang and Lee, Gim Hee},
   booktitle={NeurIPS},
   year={2025}
@@ -22,6 +25,8 @@
 @inproceedings{Zhang2025featureaware,
   bibtex_show={true},
   abbr={NeurIPS},
+  pdf={https://openreview.net/pdf/31fb81f3ee7126625031a0926b0a2572bfd01b77.pdf},
+  code={https://github.com/LogosRoboticsGroup/SeerDrive},
   title={Future-Aware End-to-End Driving: Bidirectional Modeling of Trajectory Planning and Scene Evolution},
   author={Zhang, Bozhou and Song, Nan and Li, Jingyu and Zhu, Xiatian and Deng, Jiankang and Zhang, Li},
   booktitle={NeurIPS},
@@ -31,6 +36,7 @@
 @inproceedings{Tang2025univit,
   bibtex_show={true},
   abbr={NeurIPS},
+  pdf={https://openreview.net/pdf/46f20263cc2abbd139b0f9be3ada52e0fd7427d5.pdf},
   title={UniViT: Unifying Image and Video Understanding in One Vision Encoder},
   author={Tang, Feilong and An, Xiang and Yang, Haolin and Xie, Yin and Yang, Kaicheng and Hu, Ming and Cheng, Zheng and Zhou, Xingyu and Ran, Zimin and Razzak, Imran and Feng, Ziyong and Bozorgtabar, Behzad and Deng, Jiankang and Ge, Zongyuan},
   booktitle={NeurIPS},
@@ -64,7 +70,7 @@
 @inproceedings{xie2025region,
   bibtex_show={true},
   abbr={ICCV},
-  pdf={https://arxiv.org/abs/2507.20025},
+  pdf={https://openaccess.thecvf.com/content/ICCV2025/papers/Xie_Region-based_Cluster_Discrimination_for_Visual_Representation_Learning_ICCV_2025_paper.pdf},
   code={https://github.com/deepglint/MVT},
   title={Region-based Cluster Discrimination for Visual Representation Learning},
   author={Xie, Yin and Yang, Kaicheng and An, Xiang and Wu, Kun and Zhao, Yongle and Deng, Weimo and Ran, Zimin and Wang, Yumeng and Feng, Ziyong and Miles, Roy and Elezi, Ismail and Deng, Jiankang},
@@ -75,7 +81,7 @@
 @inproceedings{cai2025forcenet,
   bibtex_show={true},
   abbr={ICCV},
-  pdf={https://arxiv.org/abs/2507.19804},
+  pdf={https://openaccess.thecvf.com/content/ICCV2025/papers/Cai_ForCenNet_Foreground-Centric_Network_for_Document_Image_Rectification_ICCV_2025_paper.pdf},
   code={https://github.com/caipeng328/ForCenNet},
   title={ForCenNet: Foreground-Centric Network for Document Image Rectification},
   author={Cai, Peng and Liqiang and Yang, Kaicheng and Guodong and Lijia and Zhounan and An, Xiang and Yang, Ninghua and Deng, Jiankang},
@@ -83,21 +89,22 @@
   year={2025}
 }
 
-@inproceedings{ran2025hust,
+@inproceedings{miao2025diffusion,
   bibtex_show={true},
   abbr={ICCV},
-  pdf={https://arxiv.org/abs/2406.13149},
-  title={HUST: High-Fidelity Unbiased Skin Tone Estimation via Texture Quantization},
-  author={Ran, Zimin and Ren, Xingyu and An, Xiang and Yang, Kaicheng and Feng, Ziyong and Yang, Jing and Potamias, Rolandos Alexandros and Zhu, Linchao and Deng, Jiankang},
+  pdf={https://openaccess.thecvf.com/content/ICCV2025/papers/Miao_Unlocking_the_Potential_of_Diffusion_Priors_in_Blind_Face_Restoration_ICCV_2025_paper.pdf},
+  title={Unlocking the Potential of Diffusion Priors in Blind Face Restoration},
+  author={Miao, Yunqi and Qu, Zhiyu and Gao, Mingqi and Chen, Changrui and Song, Jifei and Han, Jungong and Deng, Jiankang},
   booktitle={ICCV},
   year={2025}
 }
 
-@inproceedings{miao2025diffusion,
+@inproceedings{ran2025hust,
   bibtex_show={true},
   abbr={ICCV},
-  title={Unlocking the Potential of Diffusion Priors in Blind Face Restoration},
-  author={Miao, Yunqi and Qu, Zhiyu and Gao, Mingqi and Chen, Changrui and Song, Jifei and Han, Jungong and Deng, Jiankang},
+  pdf={https://openaccess.thecvf.com/content/ICCV2025/papers/Ran_HUST_High-Fidelity_Unbiased_Skin_Tone_Estimation_via_Texture_Quantization_ICCV_2025_paper.pdf},
+  title={HUST: High-Fidelity Unbiased Skin Tone Estimation via Texture Quantization},
+  author={Ran, Zimin and Ren, Xingyu and An, Xiang and Yang, Kaicheng and Feng, Ziyong and Yang, Jing and Potamias, Rolandos Alexandros and Zhu, Linchao and Deng, Jiankang},
   booktitle={ICCV},
   year={2025}
 }
@@ -105,7 +112,7 @@
 @inproceedings{wen2025principal,
   bibtex_show={true},
   abbr={ICCV},
-  pdf={https://arxiv.org/abs/2503.08685},
+  pdf={https://openaccess.thecvf.com/content/ICCV2025/papers/Wen_Principal_Components_Enable_A_New_Language_of_Images_ICCV_2025_paper.pdf},
   website={https://visual-gen.github.io/semanticist/},
   code={https://github.com/visual-gen/semanticist},
   title={Principal Components Enable A New Language of Images},
@@ -117,6 +124,7 @@
 @inproceedings{gao2025frequency,
   bibtex_show={true},
   abbr={ICCV},
+  pdf={https://openaccess.thecvf.com/content/ICCV2025/papers/Gao_Frequency-Guided_Diffusion_for_Training-Free_Text-Driven_Image_Translation_ICCV_2025_paper.pdf},
   title={Frequency-Guided Diffusion for Training-Free Text-Driven Image Translation},
   author={Gao, Zheng and Song, Jifei and Zhang, Zhensong and Deng, Jiankang and Patras, Ioannis},
   booktitle={ICCV},
@@ -126,8 +134,9 @@
 @inproceedings{zuo2025signs,
   bibtex_show={true},
   abbr={ICCV},
-  pdf={https://arxiv.org/abs/2411.17799},
+  pdf={https://openaccess.thecvf.com/content/ICCV2025/papers/Zuo_Signs_as_Tokens_A_Retrieval-Enhanced_Multilingual_Sign_Language_Generator_ICCV_2025_paper.pdf},
   website={https://2000zrl.github.io/soke/},
+  code={https://github.com/2000ZRL/SOKE},
   title={Signs as Tokens: A Retrieval-Enhanced Multilingual Sign Language Generator},
   author={Zuo, Ronglai and Potamias, Rolandos Alexandros and Ververas, Evangelos and Deng, Jiankang and Zafeiriou, Stefanos},
   booktitle={ICCV},
@@ -137,6 +146,8 @@
 @inproceedings{zhang2025vtimecot,
   bibtex_show={true},
   abbr={ICCV},
+  pdf={https://openaccess.thecvf.com/content/ICCV2025/papers/Zhang_VTimeCoT_Thinking_by_Drawing_for_Video_Temporal_Grounding_and_Reasoning_ICCV_2025_paper.pdf},
+  website={https://vtimecot.github.io/},
   title={VTimeCoT: Thinking by Drawing for Video Temporal Grounding and Reasoning},
   author={Zhang, Jinglei and Guo, Yuanfan and Potamias, Rolandos Alexandros and Deng, Jiankang and Xu, Hang and Ma, Chao},
   booktitle={ICCV},
@@ -146,7 +157,9 @@
 @inproceedings{potamias2025imhead,
   bibtex_show={true},
   abbr={ICCV},
-  title={imHead: A Large-scale Implicit Morphable Model for Localized Head Modeling},
+  pdf={https://openaccess.thecvf.com/content/ICCV2025/papers/Potamias_ImHead_A_Large-scale_Implicit_Morphable_Model_for_Localized_Head_Modeling_ICCV_2025_paper.pdf},
+  website={https://rolpotamias.github.io/imHead/},
+  title={ImHead: A Large-scale Implicit Morphable Model for Localized Head Modeling},
   author={Potamias, Rolandos Alexandros and Galanakis, Stathis and Deng, Jiankang and Papaioannou, Athanasios and Zafeiriou, Stefanos},
   booktitle={ICCV},
   year={2025}
@@ -191,6 +204,7 @@
   bibtex_show={true},
   abbr={CVPR},
   pdf={https://openaccess.thecvf.com/content/CVPR2025/papers/Qu_CaricatureBooth_Data-Free_Interactive_Caricature_Generation_in_a_Photo_Booth_CVPR_2025_paper.pdf},
+  code={https://github.com/WinKawaks/CaricatureBooth},
   title={CaricatureBooth: Data-Free Interactive Caricature Generation in a Photo Booth},
   author={Qu, Zhiyu and Miao, Yunqi and Zhang, Zhensong and Song, Jifei and Deng, Jiankang and Song, Yi-Zhe},
   booktitle={CVPR},
@@ -252,6 +266,8 @@
 @article{dan2025TransFace++,
   bibtex_show={true},
   abbr={T-PAMI},
+  pdf={https://ieeexplore.ieee.org/document/11184862},
+  code={https://github.com/DanJun6737/TransFace_pp},
   title={TransFace++: Rethinking the Face Recognition Paradigm with a Focus on Accuracy, Efficiency, and Security},
   author={Dan, Jun and Liu, Yang and Sun, Baigui and Deng, Jiankang and Luo Shan},
   journal={T-PAMI},
