--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -38,7 +38,7 @@
   abbr={NeurIPS},
   pdf={https://openreview.net/pdf/46f20263cc2abbd139b0f9be3ada52e0fd7427d5.pdf},
   title={UniViT: Unifying Image and Video Understanding in One Vision Encoder},
-  author={Tang, Feilong and An, Xiang and Yang, Haolin and Xie, Yin and Yang, Kaicheng and Hu, Ming and Cheng, Zheng and Zhou, Xingyu and Ran, Zimin and Razzak, Imran and Feng, Ziyong and Bozorgtabar, Behzad and Deng, Jiankang and Ge, Zongyuan},
+  author={Tang, Feilong and An, Xiang and ... and Deng, Jiankang and Ge, Zongyuan},
   booktitle={NeurIPS},
   year={2025}
 } 
@@ -50,7 +50,7 @@
   website={https://garygutc.github.io/UniME/},
   code={https://github.com/deepglint/UniME},
   title={Breaking the Modality Barrier: Universal Embedding Learning with Multimodal LLMs},
-  author={Gu, Tiancheng and Yang, Kaicheng and Feng, Ziyong and Wang, Xingjun and Zhang, Yanzhao and Long, Dingkun and Chen, Yingda and Cai, Weidong and Deng, Jiankang},
+  author={Gu, Tiancheng and Yang, Kaicheng and ... and Deng, Jiankang},
   booktitle={ACM-MM},
   year={2025}
 }
@@ -62,7 +62,7 @@
   website={https://garygutc.github.io/RealSyn/},
   code={https://github.com/deepglint/RealSyn},
   title={RealSyn: An Effective and Scalable Multimodal Interleaved Document Transformation Paradigm},
-  author={Gu, Tiancheng and Yang, Kaicheng and Zhang, Chaoyi and Xie, Yin and An, Xiang and Feng, Ziyong and Liu, Dongnan and Cai, Weidong and Deng, Jiankang},
+  author={Gu, Tiancheng and Yang, Kaicheng and ... and Deng, Jiankang},
   booktitle={ACM-MM},
   year={2025}
 }
@@ -73,7 +73,7 @@
   pdf={https://openaccess.thecvf.com/content/ICCV2025/papers/Xie_Region-based_Cluster_Discrimination_for_Visual_Representation_Learning_ICCV_2025_paper.pdf},
   code={https://github.com/deepglint/MVT},
   title={Region-based Cluster Discrimination for Visual Representation Learning},
-  author={Xie, Yin and Yang, Kaicheng and An, Xiang and Wu, Kun and Zhao, Yongle and Deng, Weimo and Ran, Zimin and Wang, Yumeng and Feng, Ziyong and Miles, Roy and Elezi, Ismail and Deng, Jiankang},
+  author={Xie, Yin and Yang, Kaicheng and An, Xiang and ... and Miles, Roy and Elezi, Ismail and Deng, Jiankang},
   booktitle={ICCV (Highlight)},
   year={2025}
 }
@@ -104,7 +104,7 @@
   abbr={ICCV},
   pdf={https://openaccess.thecvf.com/content/ICCV2025/papers/Ran_HUST_High-Fidelity_Unbiased_Skin_Tone_Estimation_via_Texture_Quantization_ICCV_2025_paper.pdf},
   title={HUST: High-Fidelity Unbiased Skin Tone Estimation via Texture Quantization},
-  author={Ran, Zimin and Ren, Xingyu and An, Xiang and Yang, Kaicheng and Feng, Ziyong and Yang, Jing and Potamias, Rolandos Alexandros and Zhu, Linchao and Deng, Jiankang},
+  author={Ran, Zimin and Ren, Xingyu and An, Xiang and Yang, Kaicheng and ... and Deng, Jiankang},
   booktitle={ICCV},
   year={2025}
 }
@@ -269,7 +269,7 @@
   pdf={https://ieeexplore.ieee.org/document/11184862},
   code={https://github.com/DanJun6737/TransFace_pp},
   title={TransFace++: Rethinking the Face Recognition Paradigm with a Focus on Accuracy, Efficiency, and Security},
-  author={Dan, Jun and Liu, Yang and Sun, Baigui and Deng, Jiankang and Luo Shan},
+  author={Dan, Jun and Liu, Yang and Sun, Baigui and Deng, Jiankang and Luo, Shan},
   journal={T-PAMI},
   year={2025}
 }
@@ -280,7 +280,7 @@
   pdf={https://ieeexplore.ieee.org/document/10906429/},
   code={https://github.com/XiandaGuo/SPOSGait},
   title={Gait Recognition in the Wild: A Large-scale Benchmark and NAS-based Baseline},
-  author={Guo, Xianda and Zhu, Zheng and Yang, Tian and Lin, Beibei and Huang, Guan and Zhou, Jie and Lu, Jiwen and Deng, Jiankang},
+  author={Guo, Xianda and Zhu, Zheng and Yang, Tian and Lin, Beibei and Huang, Junjie and Deng, Jiankang and Huang, Guan and Zhou, Jie and Lu, Jiwen},
   journal={T-PAMI},
   year={2025}
 }
