--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -263,6 +263,17 @@
   year={2025}
 }
 
+@article{luo2025training,
+  bibtex_show={true},
+  abbr={Nature Communications},
+  pdf={https://arxiv.org/pdf/2503.01058.pdf},
+  website={https://zhuochenn.github.io/genforce-project/},
+  title={Training Tactile Sensors to Learn Force Sensing from Each Other},
+  author={Chen, Zhuo and Ou, Ni and Zhang, Xuyang and Wu, Zhiyuan and Zhao, Yongqiang and Wang, Yupeng and Lepora, Nathan and Jamone, Lorenzo and Deng, Jiankang and Luo, Shan},
+  journal={Nature Communications},
+  year={2025}
+}
+
 @article{dan2025TransFace++,
   bibtex_show={true},
   abbr={T-PAMI},
