--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,3 +1,207 @@
+@inproceedings{zhang2026towards,
+  bibtex_show={true},
+  abbr={CVPR},
+  title={Towards Streaming Referring Video Segmentation via Large Language Model},
+  author = {Zhang, Wenkang and Yang, Kaicheng and An, Xiang and Li, Qiang and Feng, Ziyong and Yang, Wankou and Deng, Jiankang},
+  booktitle={CVPR},
+  year={2026}
+}
+
+@inproceedings{jiang2026fvgen,
+  bibtex_show={true},
+  abbr={CVPR},
+  title={FVGen: Scaling 3D Scene Datasets with Certainty-Aware Free-View Generation from Scene Geometry Reconstruction},
+  author = {Jiang, Chenhan and Chen, Yu and Zhang, Qingwen and Song, Jifei and Xu, Songcen and Yeung, Dit-Yan and Deng, Jiankang},
+  booktitle={CVPR},
+  year={2026}
+}
+
+@inproceedings{ni2026semanticVLA,
+  bibtex_show={true},
+  abbr={CVPR},
+  title={SemanticVLA: Towards Semantic Reasoning over Action Memorization via Synergistic Explicit Trace and Latent Action Planning},
+  author={Ni, Fei and Chen, Zhuo and Yuan, Yifu and Dong, Zibin and Yao, Xianze and Luo, Shan and Hao, Jianye and Deng, Jiankang and Zafeiriou, Stefanos},
+  booktitle={CVPR},
+  year={2026}
+}
+
+@inproceedings{choi2026doyou,
+  bibtex_show={true},
+  abbr={CVPR},
+  title={Do You See What I Am Pointing At? Gesture-Based Egocentric Video Question Answering},
+  author={Choi, Yura and Miles, Roy and Potamias, Rolandos Alexandros and Elezi, Ismail and Deng, Jiankang and Zafeiriou, Stefanos},
+  booktitle={CVPR},
+  year={2026}
+}
+
+@inproceedings{zhu2026unleashing,
+  bibtex_show={true},
+  abbr={CVPR},
+  title={Unleashing Vision-Language Semantics for Video Deepfake Detection},
+  author = {Zhu, Jiawen and Miao, Yunqi and Zhang, Xueyi and Deng, Jiankang and Pang, Guansong},
+  booktitle={CVPR},
+  year={2026}
+}
+
+@inproceedings{ruizponce2026interact2ar,
+  bibtex_show={true},
+  abbr={CVPR},
+  pdf={https://arxiv.org/pdf/2512.19692},
+  website={https://pabloruizponce.com/papers/Interact2Ar},
+  code={https://github.com/pabloruizponce/Interact2Ar},
+  title={Interact2Ar: Full-Body Human-Human Interaction Generation via Autoregressive Diffusion Models},
+  author = {Ruiz-Ponce, Pablo and Escalera, Sergio and García-Rodríguez, José and Deng, Jiankang and Potamias, Rolandos Alexandros},
+  booktitle={CVPR},
+  year={2026}
+}
+
+@inproceedings{zhang2026videofocus,
+  bibtex_show={true},
+  abbr={CVPR},
+  title={VideoFocus-R1: Agentic RL with Dynamic Spatio-Temporal Focus for Long Video Understanding},
+  author = {Zhang, Jinglei and Zeng, Yihan and Guo, Yuanfan and Liu, Bingde and Zhang, Wei and Potamias, Rolandos Alexandros and Deng, Jiankang and Ma, Chao},
+  booktitle={CVPR},
+  year={2026}
+}
+
+@inproceedings{xu2026fgportrait,
+  bibtex_show={true},
+  abbr={CVPR},
+  title={FG-portrait: 3D Flow Guided Editable Portrait Animation},
+  author = {Xu, Yating and Miao, Yunqi and Ververas, Evangelos and Deng, Jiankang and Song, Jifei},
+  booktitle={CVPR},
+  year={2026}
+}
+
+@inproceedings{cai2026color,
+  bibtex_show={true},
+  abbr={CVPR},
+  title={Color When It Counts: Grayscale-Guided Online Triggering for Always-On Streaming Video Sensing},
+  author = {Cai, Weitong and Zhang, Hang and Huang, Yukai and Sun, Shitong and Deng, Jiankang and Xu, Songcen and Song, Jifei and Zhang, Zhensong},
+  booktitle={CVPR},
+  year={2026}
+}
+
+@inproceedings{tijani2026magicskin,
+  bibtex_show={true},
+  abbr={ICRA},
+  pdf={https://www.arxiv.org/pdf/2512.06829},
+  website={https://zhuochenn.github.io/MagicSkin_project/},
+  title={MagicSkin: Balancing Marker and Markerless Modes in Vision-Based Tactile Sensors with a Translucent Skin},
+  author = {Tijani, Oluwatimilehin and Chen, Zhuo and Deng, Jiankang and Luo, Shan},
+  booktitle={ICRA},
+  year={2026}
+}
+
+@inproceedings{wu2026CEDex,
+  bibtex_show={true},
+  abbr={ICRA},
+  pdf={https://arxiv.org/pdf/2509.24661},
+  website={https://georgewuzy.github.io/cedex-website/},
+  code={https://github.com/GeorgeWuzy/CEDex-Grasp},
+  title={CEDex: Cross-Embodiment Dexterous Grasp Generation at Scale from Human-Like Contact Representations},
+  author = {Wu, Zhiyuan and Potamias, Rolandos Alexandros and Zhang, Xuyang and Zhang, Zhongqun and Deng, Jiankang and Luo, Shan},
+  booktitle={ICRA},
+  year={2026}
+}
+
+@inproceedings{li2026imagidrive,
+  bibtex_show={true},
+  abbr={ICRA},
+  pdf={https://arxiv.org/pdf/2508.11428},
+  code={https://github.com/fudan-zvg/ImagiDrive},
+  title={ImagiDrive: A Unified Imagination-and-Planning Framework for Autonomous Driving},
+  author = {Li, Jingyu and Zhang, Bozhou and Jin, Xin and Deng, Jiankang and Zhu, Xiatian and Zhang, Li},
+  booktitle={ICRA},
+  year={2026}
+}
+
+@inproceedings{zheng2026refocuseraser,
+  bibtex_show={true},
+  abbr={ICLR},
+  pdf={https://openreview.net/pdf?id=OkNxZGenYr},
+  code={https://github.com/ProAirVerse/ReFocusEraser},
+  title={ReFocusEraser: Refocusing for Small Object Removal with Robust Context-Shadow Repair},
+  author = {Zheng, Qingping and Huang, Bo and Liu, Yang and Zhao, Haoyu and Zheng, Ling and Wang, Zengmao and Li, Ying and Deng, Jiankang},
+  booktitle={ICLR},
+  year={2026}
+}
+
+@inproceedings{zhang2026dynamic,
+  bibtex_show={true},
+  abbr={ICLR},
+  pdf={https://openreview.net/pdf?id=10iBNwPtl2},
+  code={https://github.com/prinasi/HDR-4DGS},
+  title={Dynamic Novel View Synthesis in High Dynamic Range},
+  author = {Zhang, Kaixuan and Xiong, Zhipeng and Li, Minxian and Ren, Mingwu and Deng, Jiankang and Zhu, Xiatian},
+  booktitle={ICLR},
+  year={2026}
+}
+
+@inproceedings{gaintseva2026CASteer,
+  bibtex_show={true},
+  abbr={ICLR},
+  pdf={https://openreview.net/pdf?id=6D5Odqol1B},
+  title={CASteer: Cross-Attention Steering for Controllable Concept Erasure},
+  author = {Gaintseva, Tatiana and Oncescu, Andreea-Maria and Ma, Chengcheng and Liu, Ziquan and Benning, Martin and Slabaugh, Gregory and Deng, Jiankang and Elezi, Ismail},
+  booktitle={ICLR},
+  year={2026}
+}
+
+@inproceedings{xie2026victor,
+  bibtex_show={true},
+  abbr={AAAI},
+  pdf={https://arxiv.org/pdf/2410.14332},
+  code={https://github.com/deepglint/Victor},
+  title={ViCToR: Improving Visual Comprehension via Token Reconstruction for Pretraining LMMs},
+  author = {Xie, Yin and Yang, Kaicheng and Liang, Peirou and An, Xiang and Zhao, Yongle and Wang, Yumeng and Feng, Ziyong and Miles, Roy and Elezi, Ismail and Deng, Jiankang},
+  booktitle={AAAI},
+  year={2026}
+}
+
+@inproceedings{gu2026unime,
+  bibtex_show={true},
+  abbr={AAAI},
+  pdf={https://arxiv.org/pdf/2510.13515},
+  website={https://garygutc.github.io/UniME-v2/},
+  code={https://github.com/GaryGuTC/UniME-v2},
+  title={UniME-V2: MLLM-as-a-Judge for Universal Multimodal Embedding Learning},
+  author={Gu, Tiancheng and Yang, Kaicheng and Zhang, Kaichen and An, Xiang and Feng, Ziyong and Zhang, Yueyi and Cai, Weidong and Deng, Jiankang and Bing, Lidong},
+  booktitle={AAAI (Oral)},
+  year={2026}
+}
+
+@inproceedings{yang2026plug,
+  bibtex_show={true},
+  abbr={AAAI},
+  pdf={https://arxiv.org/pdf/2511.08971},
+  title={Plug-and-Play Clarifier: A Zero-Shot Multimodal Framework for Egocentric Intent Disambiguation},
+  author={Yang, Sicheng and Huang, Yukai and Cai, Weitong and Sun, Shitong and He, You and Deng, Jiankang and Zhang, Hang and Song, Jifei and Zhang, Zhensong},
+  booktitle={AAAI},
+  year={2026}
+}
+
+@article{chen2026uniattack,
+  bibtex_show={true},
+  abbr={IJCV},
+  pdf={https://link.springer.com/article/10.1007/s11263-025-02673-3},
+  title={UniAttack: Unified Physical-Digital Face Attack Detection},
+  author={Chen, Shunxin and Liu, Ajian and Fang, Hao and Yuan, Haocheng and Zheng, Junze and Zeng, Dingheng and Liu, Yanhong and Deng, Jiankang and Escalera, Sergio and Liu, Xiaoming and Wan, Jun and Lei, Zhen},
+  journal={IJCV},
+  year={2026}
+}
+
+@article{luo2026training,
+  bibtex_show={true},
+  abbr={Nature Communications},
+  pdf={https://arxiv.org/pdf/2503.01058.pdf},
+  website={https://zhuochenn.github.io/genforce-project/},
+  title={Training Tactile Sensors to Learn Force Sensing from Each Other},
+  author={Chen, Zhuo and Ou, Ni and Zhang, Xuyang and Wu, Zhiyuan and Zhao, Yongqiang and Wang, Yupeng and Lepora, Nathan and Jamone, Lorenzo and Deng, Jiankang and Luo, Shan},
+  journal={Nature Communications},
+  year={2026}
+}
+
 @inproceedings{Zhang2025shapecraft,
   bibtex_show={true},
   abbr={NeurIPS},
@@ -260,17 +464,6 @@
   title={Unsupervised Audio-Visual Segmentation with Modality Alignment},
   author={Bhosale, Swapnil and Yang, Haosen and Kanojia, Diptesh and Deng, Jiankang and Zhu, Xiatian},
   booktitle={AAAI},
-  year={2025}
-}
-
-@article{luo2025training,
-  bibtex_show={true},
-  abbr={Nature Communications},
-  pdf={https://arxiv.org/pdf/2503.01058.pdf},
-  website={https://zhuochenn.github.io/genforce-project/},
-  title={Training Tactile Sensors to Learn Force Sensing from Each Other},
-  author={Chen, Zhuo and Ou, Ni and Zhang, Xuyang and Wu, Zhiyuan and Zhao, Yongqiang and Wang, Yupeng and Lepora, Nathan and Jamone, Lorenzo and Deng, Jiankang and Luo, Shan},
-  journal={Nature Communications},
   year={2025}
 }
 
